Fix layout issues in student name container
[#174763772]

--- a/css/portal-dashboard/all-responses-popup/popup-student-response-list.less
+++ b/css/portal-dashboard/all-responses-popup/popup-student-response-list.less
@@ -24,6 +24,7 @@
       padding-bottom: 15px;
 
       .spotlightSelectionCheckbox {
+        flex-shrink: 0;
         width: 20px;
         height: 20px;
         border-radius: 5px;
